# windows-toolchains

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yml
.github/workflows/: checks.yml  release.yml
bazel/: BUILD.bazel  consume.bzl  repositories.bzl  toolchain_build.bzl  versions.bzl
patches/: README.md
scripts/: lock.py
tests/: BUILD.bazel  hello.c  hello.cc  smoke-test.sh
